# rand-useragent

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
scripts/: scraper.py  update-data.sh
src/rand_useragent/: __init__.py  _version.py  useragent.py
src/rand_useragent/data/: browsers.jsonl
tests/: test_useragent.py
