[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rand-useragent"
description = "An up-to-date simple random user-agent with real world database."
license = {text = "BSD-3-Clause"}
requires-python = ">=3.7"
authors = [{name = "Tolulope Kuyoro", email = "tolukuyoro@gmail.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "importlib-resources >= 5.0; python_version < '3.10'",
    "importlib-metadata ~= 4.0; python_version < '3.8'",
    "beautifulsoup4 >= 4.11.1",
    "httpx == 0.23.0",
    "anyio >= 3.4.0",
    "ua-parser == 0.18.0"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ruff == 0.0.287",
    "black == 23.7.0",
    "isort == 5.12.0",
    "pytest == 7.4.0",
    "pytest-cov == 4.1.0"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
homepage = "https://github.com/redbugg/rand-useragent"
source = "https://github.com/redbugg/rand-useragent"

[tool.ruff]
line-length = 88
select = [
    "E", "F", "W",  # default flake-8
    "I",            # isort
]
target-version = "py37"

[tool.ruff.isort]
known-first-party = ["rand_useragent"]

[tool.pytest.ini_options]
addopts = ["-rsx", "--tb=short" , "--strict-config", "--strict-markers"]
pythonpath = ["src"]

[tool.coverage.run]
source_pkgs = ["rand_useragent"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.package-data]
"rand_useragent.data" = ["*.jsonl"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"
